game mode changes

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -220,7 +220,7 @@ BaseAccessory_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultVal
 Calc Offence Stats=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 Calc Defence Stats=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 MulticastDelegateProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
-TopDownGameMode_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+TopDownGameMode_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 TopDownCharacterCleaned_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 Inventory_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 MapProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
@@ -258,6 +258,7 @@ Destrucible_Barrel_C=TopDownCharacter_C.Collision.Collision,StructProperty.Defau
 Spawn Item=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 MovementComponent=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 HoundAnim_BP_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
+ChangeLevelActor_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -282,7 +283,7 @@ AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game/b024899h/Particle_Effects/Portal
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -310,6 +311,8 @@ LastLevel=/Game/Levels/Area2-MarketMeshStart
 [AssetEditorManager]
 CleanShutdown=True
 None=======
+OpenAssetsAtExit=/Game/Levels/LevelTransitions/ChangeLevelActor.ChangeLevelActor
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -3022,6 +3025,30 @@ REINST_TopDownCharacter_C_163.Replication=True
 REINST_TopDownCharacter_C_163.Input=True
 REINST_TopDownCharacter_C_163.Actor=True
 BaseAI_C.Drop=True
+BossFightManager_C.TransformCommon=True
+BossFightManager_C.Rendering=True
+BossFightManager_C.Input=True
+BossFightManager_C.Actor=True
+ChangeLevelActor_C.TransformCommon=True
+ChangeLevelActor_C.Default=True
+ChangeLevelActor_C.Rendering=True
+ChangeLevelActor_C.Input=True
+ChangeLevelActor_C.Actor=True
+ChangeLevelActor_C.Tick=True
+ChangeLevelActor_C.Replication=True
+Emitter.TransformCommon=True
+Emitter.Particles=True
+Emitter.EmitterActions=True
+Emitter.Materials=True
+Emitter.Attachment=True
+Emitter.Lighting=True
+Emitter.Rendering=True
+Emitter.LOD=True
+Emitter.Tags=True
+Emitter.Activation=True
+Emitter.Cooking=True
+Emitter.Emitter=True
+Emitter.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -4132,6 +4159,9 @@ LastLogListing=LoadErrors
 /Game/Models/Armour/LeatherCowlHelmet=(R=0.000000,G=0.500000,B=0.079121,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/b024899h/Particle_Effects/Portal/PortalEffect.PortalEffect;
+RecentlyPlaced=/Game/Levels/LevelTransitions/ChangeLevelActor.ChangeLevelActor;
+RecentlyPlaced=/Game/c024816h/LargeHealthPotion.LargeHealthPotion;
 RecentlyPlaced=/Game/Models/weapons/shield.shield;
 RecentlyPlaced=/Game/Models/finishedassets/gold/shield.shield;
 RecentlyPlaced=/Game/Models/weapons/broken_shield.broken_shield;
@@ -4149,9 +4179,6 @@ RecentlyPlaced=/Game/AIAgent/AIbot.AIbot;
 RecentlyPlaced=/Game/AIAgent/DerivedClasses/RangedAI.RangedAI;
 RecentlyPlaced=/Game/Models/finishedassets/chains/Chains_Unw.Chains_Unw;
 RecentlyPlaced=/Game/AIAgent/DerivedClasses/HybridAI.HybridAI;
-RecentlyPlaced=/Game/Models/finishedassets/weapontack/WR_Un.WR_Un;
-RecentlyPlaced=/Game/Models/weapons/LP_dagger.LP_dagger;
-RecentlyPlaced=/Game/Models/finishedassets/oven/Oven_Unwrapped__1_.Oven_Unwrapped__1_;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -4204,26 +4231,26 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/Area2-MarketMeshStart
-MRUItem1=/Game/AIAgent/Proto_controller
-MRUItem2=/Game/AIAgent/ProtoTree
-MRUItem3=/Game/AIAgent/BaseAI
-MRUItem4=/Game/Levels/Demo
-MRUItem5=/Game/TopDownBP/Interfaces/PlayerInt
-MRUItem6=/Game/TopDownBP/Blueprints/PlayerControl
-MRUItem7=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem8=/Game/TopDownBP/Blueprints/I_DeathSystem
-MRUItem9=/Game/Josh/AnimationsTest/AttackMontages/Slash_Montage
-MRUItem10=/Game/Josh/Skinned_Player_Skeleton
-MRUItem11=/Game/Josh/AnimationsTest/AttackMontages/Heavy_Uppercut_Montage
-MRUItem12=/Game/Josh/TestRoom/Running_Anim
-MRUItem13=/Game/Josh/1HHumanIdleRun_BP
-MRUItem14=/Game/Josh/HumanAnimBP
-MRUItem15=/Game/Josh/HoundFolder/HoundAnim_BP
-MRUItem16=/Game/Josh/HoundFolder/HoundIdleRun_BS
-MRUItem17=/Game/b024899h/ParticleEffectsTest
-MRUItem18=/Game/c024816h/SmallHealthPotion
-MRUItem19=/Game/GW000979/ItemEnum
+MRUItem0=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem1=/Game/Levels/LevelTransitions/ChangeLevelActor
+MRUItem2=/Game/Levels/Area2-MarketMeshStart
+MRUItem3=/Game/AIAgent/Proto_controller
+MRUItem4=/Game/AIAgent/ProtoTree
+MRUItem5=/Game/AIAgent/BaseAI
+MRUItem6=/Game/Levels/Demo
+MRUItem7=/Game/TopDownBP/Interfaces/PlayerInt
+MRUItem8=/Game/TopDownBP/Blueprints/PlayerControl
+MRUItem9=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem10=/Game/TopDownBP/Blueprints/I_DeathSystem
+MRUItem11=/Game/Josh/AnimationsTest/AttackMontages/Slash_Montage
+MRUItem12=/Game/Josh/Skinned_Player_Skeleton
+MRUItem13=/Game/Josh/AnimationsTest/AttackMontages/Heavy_Uppercut_Montage
+MRUItem14=/Game/Josh/TestRoom/Running_Anim
+MRUItem15=/Game/Josh/1HHumanIdleRun_BP
+MRUItem16=/Game/Josh/HumanAnimBP
+MRUItem17=/Game/Josh/HoundFolder/HoundAnim_BP
+MRUItem18=/Game/Josh/HoundFolder/HoundIdleRun_BS
+MRUItem19=/Game/b024899h/ParticleEffectsTest
 
 [WidgetTemplatesExpanded]
 Extra=False
