--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -103,12 +103,12 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/Levels/Area1-Rework
-MRUItem1=/Game/Levels/MainMenu
-MRUItem2=/Game/Levels/texturedzoo
-MRUItem3=/Game/Levels/Demo
-MRUItem4=/Game/b024899h/ParticleEffectsTest
-MRUItem5=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem1=/Game/Levels/Area1-Rework
+MRUItem2=/Game/Levels/MainMenu
+MRUItem3=/Game/Levels/texturedzoo
+MRUItem4=/Game/Levels/Demo
+MRUItem5=/Game/b024899h/ParticleEffectsTest
 MRUItem6=/Game/Levels/Area2-Market
 MRUItem7=/Game/Levels/MechanicsLevel
 MRUItem8=/Game/Chloe/UI/Main_Menu_level/Main_Menu
@@ -174,7 +174,7 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Pause,MoviePlayerSettings.Movies.StartupMovies,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Pause,MoviePlayerSettings.Movies.StartupMovies,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 SphereComponent=SphereComponent.Collision.Collision,
-TopDownCharacter_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
+TopDownCharacter_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 AIbot_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 K2Node_VariableGet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,
@@ -284,7 +284,7 @@ AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
-ContentBrowserTab1.SelectedPaths=/Game/Movies
+ContentBrowserTab1.SelectedPaths=/Game/b024899h/Particle_Effects/Whirlwind
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -312,6 +312,7 @@ LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 [AssetEditorManager]
 CleanShutdown=True
 None=======
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -3129,6 +3130,11 @@ FileMediaSource.File=True
 FileMediaSource.Platforms=True
 CorruptedSlave_C.Stats=True
 BaseAI_C.Drop=True
+DecalActor.TransformCommon=True
+DecalActor.Decal=True
+DecalActor.Rendering=True
+DecalActor.Tags=True
+DecalActor.Cooking=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -3330,9 +3336,9 @@ NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIbot_C=
 Character="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-Character=
+Character="\"Object.Mesh\" \"Object.Mesh\" "
 Pawn="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-Pawn=
+Pawn="\"Object.Mesh\" \"Object.Mesh\" "
 None=======
 None=======
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -3349,7 +3355,7 @@ AIController="\"Object.Default.DebugColour\" "
 Controller="\"Object.Default.DebugColour\" "
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 TopDownCharacter_C="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-TopDownCharacter_C=
+TopDownCharacter_C="\"Object.Mesh\" \"Object.Mesh\" "
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_603="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_609="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -3489,7 +3495,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 [Directories2]
 UNR=../../../../../../Users/c024816h/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 UNR=../../../../../../Users/s017290g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
-UNR=../../../../../../Users/wstan/Desktop/Github/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
+UNR=../../../../../../Users/s017290g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 None=======
 None=======
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -4274,6 +4280,13 @@ LastLogListing=PIE
 /Game/Models/Armour/LeatherCowlHelmet=(R=0.000000,G=0.500000,B=0.079121,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/b024899h/Particle_Effects/Whirlwind/Whirlwind_PE.Whirlwind_PE;
+RecentlyPlaced=/Game/b024899h/Particle_Effects/InvulnRune/InvulnPE.InvulnPE;
+RecentlyPlaced=/Game/b024899h/Particle_Effects/ShieldEffect/Shield_PE.Shield_PE;
+RecentlyPlaced=/Game/b024899h/Particle_Effects/1Decals/SummonRuneOutterDecal.SummonRuneOutterDecal;
+RecentlyPlaced=/Game/b024899h/Particle_Effects/1Decals/SummonRuneDecal.SummonRuneDecal;
+RecentlyPlaced=/Game/b024899h/Particle_Effects/1Decals/InvulnRuneOutterDecal.InvulnRuneOutterDecal;
+RecentlyPlaced=/Game/b024899h/Particle_Effects/1Decals/InvulnRuneDecal.InvulnRuneDecal;
 RecentlyPlaced=/Game/EnemyAgent/CorruptedSlave.CorruptedSlave;
 RecentlyPlaced=/Game/Movies/Area1_FlyOver1.Area1_FlyOver1;
 RecentlyPlaced=/Game/AssetZoo_Flyover1.AssetZoo_Flyover1;
@@ -4287,13 +4300,6 @@ RecentlyPlaced=/Game/Will/Destrucible_Barrel.Destrucible_Barrel;
 RecentlyPlaced=/Game/Models/finishedassets/barrel/LP_barrel_DM.LP_barrel_DM;
 RecentlyPlaced=/Game/Models/Armour/chest__1__Part_1__Ben_Wilkinson/chest_piece_1_gold_Ben_Wilkinson.chest_piece_1_gold_Ben_Wilkinson;
 RecentlyPlaced=/Game/Models/Armour/chest__1__Part_1__Ben_Wilkinson/chest__1_leather_ben_wilkinson.chest__1_leather_ben_wilkinson;
-RecentlyPlaced=/Game/Models/Armour/Chest_1/chest_1__ben_wilkinson.chest_1__ben_wilkinson;
-RecentlyPlaced=/Game/Models/Armour/Amulet_Ben_Wilkinson/Amulet/necklace__ben_wilkinson_Mat.necklace__ben_wilkinson_Mat;
-RecentlyPlaced=/Game/Models/Armour/Amulet/necklace__ben_wilkinson.necklace__ben_wilkinson;
-RecentlyPlaced=/Game/T019847G/FadingMeshes/NewFade_M.NewFade_M;
-RecentlyPlaced=/Game/Materials/Green.Green;
-RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
-RecentlyPlaced=/Game/AIAgent/AIbot.AIbot;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -4348,8 +4354,8 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AIAgent/BaseAI
-MRUItem1=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem0=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem1=/Game/AIAgent/BaseAI
 MRUItem2=/Game/Widgets/Ability_Wheel
 MRUItem3=/Game/Levels/Area1-Rework
 MRUItem4=/Game/Movies/MenuVideo1
