--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,17 +105,18 @@ CurrentPosGridSize=4
 CurrentRotGridMode=GridMode_DivisionsOf360
 
 [MRU]
-MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem1=/Game/b024899h/ParticleEffectsTest
-MRUItem2=/Game/Levels/Demo
-MRUItem3=/Game/Levels/Area1-Rework
-MRUItem4=/Game/Levels/Area2-Market
-MRUItem5=/Game/Levels/texturedzoo
-MRUItem6=/Game/Levels/MechanicsLevel
-MRUItem7=/Game/Levels/MainMenu
-MRUItem8=/Game/Chloe/UI/Main_Menu_level/Main_Menu
-MRUItem9=/Game/Levels/TerrainMap
-MRUItem10=/Game/Levels/BlockOut
+MRUItem0=/Game/Levels/Area2-MarketMeshStart
+MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem2=/Game/b024899h/ParticleEffectsTest
+MRUItem3=/Game/Levels/Demo
+MRUItem4=/Game/Levels/Area1-Rework
+MRUItem5=/Game/Levels/Area2-Market
+MRUItem6=/Game/Levels/texturedzoo
+MRUItem7=/Game/Levels/MechanicsLevel
+MRUItem8=/Game/Levels/MainMenu
+MRUItem9=/Game/Chloe/UI/Main_Menu_level/Main_Menu
+MRUItem10=/Game/Levels/TerrainMap
+MRUItem11=/Game/Levels/BlockOut
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Pause,
@@ -265,7 +266,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
 ContentBrowserTab1.HorizontalSplitter.SlotSize0=0.900000
 ContentBrowserTab1.HorizontalSplitter.SlotSize1=0.900000
-ContentBrowserTab1.ActiveTypeFilters=
+ContentBrowserTab1.ActiveTypeFilters=Blueprint,UserDefinedEnum,UserDefinedStruct,EditorUtilityBlueprint
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
@@ -281,7 +282,7 @@ AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
-ContentBrowserTab1.SelectedPaths=/Game/Josh/WeaponsFinalScale
+ContentBrowserTab1.SelectedPaths=/Game
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -304,7 +305,7 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
+LastLevel=/Game/Levels/Area2-MarketMeshStart
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -3047,6 +3048,61 @@ SkeletalMeshComponent.Materials=True
 MaterialExpressionMultiply.MaterialExpressionMultiply=True
 MaterialExpressionMultiply.MaterialExpression=True
 MaterialExpression.MaterialExpression=True
+HoundEnemyAI_C.TransformCommon=True
+HoundEnemyAI_C.Animation=True
+HoundEnemyAI_C.Mesh=True
+HoundEnemyAI_C.Default=True
+HoundEnemyAI_C.Tick=True
+HoundEnemyAI_C.Stats=True
+HoundEnemyAI_C.ComponentTick=True
+HoundEnemyAI_C.Status=True
+HoundEnemyAI_C.Bleed=True
+HoundEnemyAI_C.Physics=True
+HoundEnemyAI_C.Stun=True
+HoundEnemyAI_C.Crystalise=True
+HoundEnemyAI_C.Collision=True
+HoundEnemyAI_C.Lighting=True
+HoundEnemyAI_C.Blind=True
+HoundEnemyAI_C.Poison=True
+HoundEnemyAI_C.LifeSteal=True
+HoundEnemyAI_C.Rendering=True
+HoundEnemyAI_C.Drop=True
+HoundEnemyAI_C.Clothing=True
+HoundEnemyAI_C.ClothingSimulation=True
+HoundEnemyAI_C.Tags=True
+HoundEnemyAI_C.ComponentReplication=True
+HoundEnemyAI_C.Activation=True
+HoundEnemyAI_C.Variable=True
+HoundEnemyAI_C.Cooking=True
+HoundEnemyAI_C.Character Movement: Jumping / Falling=True
+HoundEnemyAI_C.Character Movement (General Settings)=True
+HoundEnemyAI_C.Character Movement: Walking=True
+HoundEnemyAI_C.Character Movement: Swimming=True
+HoundEnemyAI_C.Character Movement: Flying=True
+HoundEnemyAI_C.Character Movement: Custom Movement=True
+HoundEnemyAI_C.Character Movement (Rotation Settings)=True
+HoundEnemyAI_C.Character Movement (Networking)=True
+HoundEnemyAI_C.Character Movement: Physics Interaction=True
+HoundEnemyAI_C.Character Movement=True
+HoundEnemyAI_C.Character Movement: Avoidance=True
+HoundEnemyAI_C.Character Movement: NavMesh Movement=True
+HoundEnemyAI_C.RootMotion=True
+HoundEnemyAI_C.NavMovement=True
+HoundEnemyAI_C.Velocity=True
+HoundEnemyAI_C.PlanarMovement=True
+HoundEnemyAI_C.MovementComponent=True
+HoundEnemyAI_C.Shape=True
+HoundEnemyAI_C.Navigation=True
+HoundEnemyAI_C.Character=True
+HoundEnemyAI_C.Camera=True
+HoundEnemyAI_C.Pawn=True
+HoundEnemyAI_C.Replication=True
+HoundEnemyAI_C.Input=True
+HoundEnemyAI_C.Actor=True
+HoundEnemyAI_C.Materials=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -3229,6 +3285,14 @@ None=======
 /Game/Josh/AnimationsTest/Bayonet_Stab.Bayonet_Stab=0
 /Game/Josh/WeaponsFinalScale/egyptiandagger1.egyptiandagger1=0
 /Game/Josh/WeaponsFinalScale/BronzeMetal_M.BronzeMetal_M=0
+/Game/Josh/HoundFolder/Dog.Dog=0
+/Game/Josh/WeaponsFinalScale/RepairedShield.RepairedShield=0
+/Game/Josh/WeaponsFinalScale/shortsword_lowpoly__1_.shortsword_lowpoly__1_=0
+/Game/Josh/PlayerCharacterJ/PurplishChar_M.PurplishChar_M=1
+/Game/Josh/PlayerCharacterJ/DefaultChar_M.DefaultChar_M=1
+/Game/Josh/HoundFolder/Hound-Rig__1_.Hound-Rig__1_=0
+/Game/Josh/CultistAnims/Cultist-Staff-AOEHeal.Cultist-Staff-AOEHeal=0
+/Game/AIAgent/DerivedClasses/HoundEnemyAI.HoundEnemyAI=0
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -3400,7 +3464,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 [Directories2]
 UNR=../../../../../../Users/c024816h/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 UNR=../../../../../../Users/s017290g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
-UNR=../../../../../../Users/c024816h/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
+UNR=../../../../../../Users/c024816h/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
 None=======
 None=======
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -4172,6 +4236,8 @@ LastLogListing=FBXImport
 /Game/Models/Armour/LeatherCowlHelmet=(R=0.000000,G=0.500000,B=0.079121,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/Josh/staff.staff;
+RecentlyPlaced=/Game/Josh/axe.axe;
 RecentlyPlaced=/Game/Josh/WeaponsFinalScale/BronzeMetal_M.BronzeMetal_M;
 RecentlyPlaced=/Game/Josh/WeaponsFinalScale/shortsword_lowpoly__1_.shortsword_lowpoly__1_;
 RecentlyPlaced=/Game/Models/weapons/shortsword_lowpoly_PhysicsAsset.shortsword_lowpoly_PhysicsAsset;
@@ -4190,8 +4256,6 @@ RecentlyPlaced=/Game/Models/weapons/broken_shield.broken_shield;
 RecentlyPlaced=/Game/Will/Destrucible_Barrel.Destrucible_Barrel;
 RecentlyPlaced=/Game/Models/finishedassets/barrel/LP_barrel_DM.LP_barrel_DM;
 RecentlyPlaced=/Game/Models/Armour/chest__1__Part_1__Ben_Wilkinson/chest_piece_1_gold_Ben_Wilkinson.chest_piece_1_gold_Ben_Wilkinson;
-RecentlyPlaced=/Game/Models/Armour/chest__1__Part_1__Ben_Wilkinson/chest__1_leather_ben_wilkinson.chest__1_leather_ben_wilkinson;
-RecentlyPlaced=/Game/Models/Armour/Chest_1/chest_1__ben_wilkinson.chest_1__ben_wilkinson;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -4244,26 +4308,26 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Josh/WeaponsFinalScale/BronzeMetal_M
-MRUItem1=/Game/Josh/AnimationsTest/Bayonet_Stab
-MRUItem2=/Game/Josh/WeaponsFinalScale/egyptiandagger1
-MRUItem3=/Game/SocketTesting1
-MRUItem4=/Game/Josh/Skinned_Player_Skeleton
-MRUItem5=/Game/GW000979/DataStruct/DataTables/WeaponDataTable
-MRUItem6=/Game/GW000979/DataStruct/Structs/Weapon_Struct
-MRUItem7=/Game/Josh/Skinned_Player
-MRUItem8=/Game/Josh/1HShieldHumanIdleRun_BP
-MRUItem9=/Game/Josh/AnimationsTest/AttackMontages/Potion_Smash_Montage
-MRUItem10=/Game/Josh/AnimationsTest/AttackMontages/Standing_Draw_Arrow_Montage
-MRUItem11=/Game/Josh/AnimationsTest/AttackMontages/Standing_Disarm_Bow_Montage
-MRUItem12=/Game/Josh/AnimationsTest/AttackMontages/Stab_Montage
-MRUItem13=/Game/Josh/AnimationsTest/AttackMontages/Slash_R2L_Montage
-MRUItem14=/Game/Josh/AnimationsTest/AttackMontages/Slash_Montage
-MRUItem15=/Game/Josh/AnimationsTest/AttackMontages/Slash_L2R_Montage
-MRUItem16=/Game/Josh/AnimationsTest/AttackMontages/Quick_Potion_Montage
-MRUItem17=/Game/Josh/AnimationsTest/AttackMontages/360_Montage
-MRUItem18=/Game/Josh/AnimationsTest/AttackMontages/Standing_Equip_Bow_Montage
-MRUItem19=/Game/Josh/AnimationsTest/Quick_Potion
+MRUItem0=/Game/Josh/Skinned_Player
+MRUItem1=/Game/Josh/Skinned_Player_Skeleton
+MRUItem2=/Game/Josh/CultistAnims/Cultist-Staff-AOEHeal
+MRUItem3=/Game/Josh/PlayerCharacterJ/DefaultChar_M
+MRUItem4=/Game/Josh/Skinned_Player_PhysicsAsset
+MRUItem5=/Game/Josh/PlayerCharacterJ/PurplishChar_M
+MRUItem6=/Game/Josh/WeaponsFinalScale/shortsword_lowpoly__1_
+MRUItem7=/Game/Josh/WeaponsFinalScale/RepairedShield
+MRUItem8=/Game/Josh/HoundFolder/Dog
+MRUItem9=/Game/Josh/HoundFolder/Hound-Rig__1_
+MRUItem10=/Game/AIAgent/DerivedClasses/HoundEnemyAI
+MRUItem11=/Game/Levels/Area2-MarketMeshStart
+MRUItem12=/Game/Josh/WeaponsFinalScale/BronzeMetal_M
+MRUItem13=/Game/Josh/AnimationsTest/Bayonet_Stab
+MRUItem14=/Game/Josh/WeaponsFinalScale/egyptiandagger1
+MRUItem15=/Game/SocketTesting1
+MRUItem16=/Game/GW000979/DataStruct/DataTables/WeaponDataTable
+MRUItem17=/Game/GW000979/DataStruct/Structs/Weapon_Struct
+MRUItem18=/Game/Josh/1HShieldHumanIdleRun_BP
+MRUItem19=/Game/Josh/AnimationsTest/AttackMontages/Potion_Smash_Montage
 
 [WidgetTemplatesExpanded]
 Extra=False
