--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,15 +105,15 @@ CurrentPosGridSize=4
 CurrentRotGridMode=GridMode_DivisionsOf360
 
 [MRU]
-MRUItem0=/Game/Levels/Area2-MarketMeshStart
-MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem2=/Game/Levels/Demo
-MRUItem3=/Game/b024899h/ParticleEffectsTest
-MRUItem4=/Game/Levels/Area1-Rework
-MRUItem5=/Game/Levels/Area2-Market
-MRUItem6=/Game/Levels/texturedzoo
-MRUItem7=/Game/Levels/MechanicsLevel
-MRUItem8=/Game/Levels/MainMenu
+MRUItem0=/Game/Levels/MainMenu
+MRUItem1=/Game/Levels/Area2-MarketMeshStart
+MRUItem2=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem3=/Game/Levels/Demo
+MRUItem4=/Game/b024899h/ParticleEffectsTest
+MRUItem5=/Game/Levels/Area1-Rework
+MRUItem6=/Game/Levels/Area2-Market
+MRUItem7=/Game/Levels/texturedzoo
+MRUItem8=/Game/Levels/MechanicsLevel
 MRUItem9=/Game/Chloe/UI/Main_Menu_level/Main_Menu
 MRUItem10=/Game/Levels/TerrainMap
 MRUItem11=/Game/Levels/BlockOut
@@ -283,7 +283,7 @@ AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
-ContentBrowserTab1.SelectedPaths=/Game/b024899h/Particle_Effects/Portal
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -306,13 +306,11 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/Levels/Area2-MarketMeshStart
+LastLevel=/Game/Levels/MainMenu
 
 [AssetEditorManager]
 CleanShutdown=True
 None=======
-OpenAssetsAtExit=/Game/Levels/LevelTransitions/ChangeLevelActor.ChangeLevelActor
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -3227,7 +3225,7 @@ SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArra
 ShapeComponent="\"Object.CapsuleHalfHeight\" \"Object.CapsuleHalfHeight\" "
 PrimitiveComponent="\"Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
 SceneComponent=
-ActorComponent="\"Object.Velocity\" \"Object.Velocity\" "
+ActorComponent=
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -3255,7 +3253,7 @@ AIController="\"Object.Default.DebugColour\" "
 Controller="\"Object.Default.DebugColour\" "
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 TopDownCharacter_C="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-TopDownCharacter_C="\"Object.ParticleSystems\" \"Object.ParticleSystems\" "
+TopDownCharacter_C=
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_603="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_609="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -4231,26 +4229,26 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem1=/Game/Levels/LevelTransitions/ChangeLevelActor
-MRUItem2=/Game/Levels/Area2-MarketMeshStart
-MRUItem3=/Game/AIAgent/Proto_controller
-MRUItem4=/Game/AIAgent/ProtoTree
-MRUItem5=/Game/AIAgent/BaseAI
-MRUItem6=/Game/Levels/Demo
-MRUItem7=/Game/TopDownBP/Interfaces/PlayerInt
-MRUItem8=/Game/TopDownBP/Blueprints/PlayerControl
-MRUItem9=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem10=/Game/TopDownBP/Blueprints/I_DeathSystem
-MRUItem11=/Game/Josh/AnimationsTest/AttackMontages/Slash_Montage
-MRUItem12=/Game/Josh/Skinned_Player_Skeleton
-MRUItem13=/Game/Josh/AnimationsTest/AttackMontages/Heavy_Uppercut_Montage
-MRUItem14=/Game/Josh/TestRoom/Running_Anim
-MRUItem15=/Game/Josh/1HHumanIdleRun_BP
-MRUItem16=/Game/Josh/HumanAnimBP
-MRUItem17=/Game/Josh/HoundFolder/HoundAnim_BP
-MRUItem18=/Game/Josh/HoundFolder/HoundIdleRun_BS
-MRUItem19=/Game/b024899h/ParticleEffectsTest
+MRUItem0=/Game/Levels/MainMenu
+MRUItem1=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem2=/Game/AIAgent/BaseAI
+MRUItem3=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem4=/Game/Levels/LevelTransitions/ChangeLevelActor
+MRUItem5=/Game/Levels/Area2-MarketMeshStart
+MRUItem6=/Game/AIAgent/Proto_controller
+MRUItem7=/Game/AIAgent/ProtoTree
+MRUItem8=/Game/Levels/Demo
+MRUItem9=/Game/TopDownBP/Interfaces/PlayerInt
+MRUItem10=/Game/TopDownBP/Blueprints/PlayerControl
+MRUItem11=/Game/TopDownBP/Blueprints/I_DeathSystem
+MRUItem12=/Game/Josh/AnimationsTest/AttackMontages/Slash_Montage
+MRUItem13=/Game/Josh/Skinned_Player_Skeleton
+MRUItem14=/Game/Josh/AnimationsTest/AttackMontages/Heavy_Uppercut_Montage
+MRUItem15=/Game/Josh/TestRoom/Running_Anim
+MRUItem16=/Game/Josh/1HHumanIdleRun_BP
+MRUItem17=/Game/Josh/HumanAnimBP
+MRUItem18=/Game/Josh/HoundFolder/HoundAnim_BP
+MRUItem19=/Game/Josh/HoundFolder/HoundIdleRun_BS
 
 [WidgetTemplatesExpanded]
 Extra=False
